[tool.poetry]
name = "urdfpy"
version = "0.1.0"
description = "A Pytorch fork of Matthew Matl's urdfpy"
authors = ["Adam Fishman <afishman@cs.washington.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.2"
networkx = "^2.5"
numpy = "^1.20.1"
Pillow = "^8.1.2"
pycollada = "^0.7.1"
pyrender = "^0.1.45"
scipy = "^1.6.1"
six = "^1.15.0"
trimesh = "^3.9.9"
torch = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pre-commit = "^2.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
